Test runtime/cds/appcds/DumpRuntimeClassesTest.java from JDK-8324259 is failing

XMLWordPrintable

    • 24
    • b21

      Test: runtime/cds/appcds/DumpRuntimeClassesTest.java

      java.lang.RuntimeException: 'source: jrt:/java.base' found in stdout
      at jdk.test.lib.process.OutputAnalyzer.shouldNotContain(OutputAnalyzer.java:299)
      at DumpRuntimeClassesTest.main(DumpRuntimeClassesTest.java:63)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      at java.base/java.lang.reflect.Method.invoke(Method.java:573)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:333)
      at java.base/java.lang.Thread.run(Thread.java:1576)

      ...
      [5.528s][info ][class,load] sun.launcher.LauncherHelper source: shared objects file
      [5.641s][info ][class,load] java.util.jar.JarVerifier source: jrt:/java.base
      [5.642s][info ][class,load] java.util.jar.Attributes source: shared objects file
      ...

            Assignee:
            Matias Saavedra Silva
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: