8341452: Test runtime/cds/appcds/DumpRuntimeClassesTest.java from JDK-8324259 is failing