src/hotspot/share/cds/metaspaceShared.cpp
@@ -63,6 +63,7 @@
 #include "logging/logStream.hpp"
 #include "memory/metaspace.hpp"
 #include "memory/metaspaceClosure.hpp"
+#include "memory/oopFactory.hpp"
 #include "memory/resourceArea.hpp"
 #include "memory/universe.hpp"
 #include "nmt/memTracker.hpp"
@@ -751,12 +752,38 @@ void MetaspaceShared::preload_classes(TRAPS) {
     }
   }
 
-  // Exercise the manifest processing code to ensure classes used by CDS at runtime
-  // are always archived
+  // Some classes are used at CDS runtime but are not loaded, and therefore archived, at
+  // dumptime. We can perform dummmy calls to these classes at dumptime to ensure they
+  // are archived.
+  make_dummy_calls(CHECK);
+
+  log_info(cds)("Loading classes to share: done.");
+}
+
+void MetaspaceShared::make_dummy_calls(TRAPS) {
+  // Exercise the manifest processing code
   const char* dummy = "Manifest-Version: 1.0\n";
   CDSProtectionDomain::create_jar_manifest(dummy, strlen(dummy), CHECK);
 
-  log_info(cds)("Loading classes to share: done.");
+  // Exercise JarVerifier
+  Handle manifest_name = java_lang_String::create_from_str("dummy.jar", CHECK);
+  typeArrayOop bytes = oopFactory::new_byteArray(0, CHECK);
+  Handle dummy_bytes(THREAD, bytes);
+  JavaCalls::construct_new_instance(vmClasses::Jar_Verifier_klass(),
+                                    vmSymbols::JarVerifier_constructor_signature(),
+                                    manifest_name, dummy_bytes,
+                                    CHECK);
+
+  // Exercise FileSystem and URL code
+  JavaValue result(T_OBJECT);
+  Handle path_string = java_lang_String::create_from_str("dummy.jar", CHECK);
+  JavaCalls::call_static(&result,
+                         vmClasses::jdk_internal_loader_ClassLoaders_klass(),
+                         vmSymbols::toFileURL_name(),
+                         vmSymbols::toFileURL_signature(),
+                         path_string,
+                         CHECK);
+
 }
 
 void MetaspaceShared::preload_and_dump_impl(StaticArchiveBuilder& builder, TRAPS) {
@@ -798,16 +825,6 @@ void MetaspaceShared::preload_and_dump_impl(StaticArchiveBuilder& builder, TRAPS
     CDSConfig::stop_using_optimized_module_handling();
   }
 #endif
-
-  // Dummy call to load classes used at CDS runtime
-  JavaValue result(T_OBJECT);
-  Handle path_string = java_lang_String::create_from_str("dummy.jar", CHECK);
-  JavaCalls::call_static(&result,
-                         vmClasses::jdk_internal_loader_ClassLoaders_klass(),
-                         vmSymbols::toFileURL_name(),
-                         vmSymbols::toFileURL_signature(),
-                         path_string,
-                         CHECK);
 
   VM_PopulateDumpSharedSpace op(builder);
   VMThread::execute(&op);
