src/hotspot/share/cds/metaspaceShared.hpp
@@ -75,6 +75,7 @@ class MetaspaceShared : AllStatic {
 #endif
 
 private:
+  static void make_dummy_calls(TRAPS) NOT_CDS_RETURN;
   static void preload_and_dump_impl(StaticArchiveBuilder& builder, TRAPS) NOT_CDS_RETURN;
   static void preload_classes(TRAPS) NOT_CDS_RETURN;
 
